--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,6 +1,7 @@
-/* purgecss start ignore */
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-/* purgecss end ignore */
+@import './normalize.css';
 
-@import 'tailwindcss/utilities';
+@font-face {
+    font-family: 'roboto';
+    src: url('./Roboto-Regular.woff') format('woff'),
+         url('./Roboto-Regular.woff2') format('woff2');
+}
